--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
+
+  dio: ^4.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
